samples/_failures_safe/1761465318_0fad50_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_669bef4e.c: In function ‘main’:
./samples/SAFE/__tmp_669bef4e.c:155:5: error: expected declaration or statement at end of input
  155 |     parse_expression(&state);
      |     ^~~~~~~~~~~~~~~~
